# Screeni-py

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  CandlePatterns.py  ColorText.py  Dockerfile  INSTALLATION.md  LICENSE  LICENSE_Third_Party  Makefile  README.md  docker-compose.yml  last_screened_results.pkl  last_screened_unformatted_results.pkl  otaUpdater.py  pyproject.toml  requirements.txt  run_screenipy.sh  screenipy-result.xlsx  screenipy.ini  screenipy.py  screenipy.yaml
.devcontainer/: devcontainer.json
.github/: install_talib.sh
.github/dependencies/: TA_Lib-0.4.19-cp39-cp39-win_amd64.whl
.github/workflows/: python-app.yml  squash.py  workflow-automerge.yml  workflow-build-macos.yml  workflow-build-matrix.yml  workflow-ci.yml  workflow-docker-streamlit.yml  workflow-download-data.yml  workflow-stale.yml  workflow-test.yml
actions-data-download/: stock_data_190225.pkl  stock_data_200225.pkl  stock_data_210225.pkl
app/: main.py
app/static/assets/images/: hashes.json
app/static/assets/mobirise/css/: mbr-additional.css
app/static/assets/theme/js/: script.js
app/static/assets/web/assets/cookies-alert-plugin/: cookies-alert-core.js  cookies-alert-script.js
app/templates/: macros.jinja
app/templates/components/: footer.html  navbar.html
app/templates/pages/: index.html  screenipy.html
classes/: ConfigManager.py
src/: last_screened_results.pkl  last_screened_unformatted_results.pkl  nse_test.py  release.md  screenipy.ini  screenipy.py  screenipy.spec  screenipy.yaml  streamlit_app.py
src/agents/: __init__.py  agent_loader.py  kite_auth_test.py  kite_session.py  llm_config.py  scheduler.py  screener_tools.py  screeni_agent.py
src/agents/personas/: day_trader.yaml  momentum_analyst.yaml  option_buyer.yaml  swing_trader.yaml  value_screener.yaml
src/chromadb_store/: chroma.sqlite3
src/classes/: BrowserConfigStore.py  CandlePatterns.py  Changelog.py  ConfigManager.py  Database.py  Fetcher.py  OtaUpdater.py  ParallelProcessing.py  Screener.py  ScreenipyTA.py  SuppressOutput.py  Utility.py  institutional_activity.py
src/ml/: eval.py  experiment.ipynb  nifty_model.h5  nifty_model.pkl  nifty_model_v2.h5  nifty_model_v2.pkl  nifty_model_v3.h5  nifty_model_v3.pkl
src/screenipy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ui/: __init__.py  ai_native_tab.py  charts.py  classic_tab.py
test/: screenipy_test.py  test_agent_tools.py  test_database.py  test_llm_config.py
