[project]
name = "screenipy"
version = "2.29.0"
description = "An open-source NSE stock screener"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "appdirs",
    "cachecontrol",
    "contextlib2",
    "nsetools",
    "openpyxl",
    "progress",
    "retrying",
    "scipy>=1.11.2,<2",
    "tabulate",
    "yfinance==0.2.61",
    "alive-progress==1.6.2",
    "Pillow",
    "scikit-learn>=1.3.2,<2",
    "joblib",
    "pandas>=2.1.2,<3",
    "requests",
    "streamlit",
    "openai-agents",
    "anthropic",
    "litellm",
    "apscheduler",
    "plotly",
    "pyyaml",
    "httpx",
    "ta-lib",
    "ta",
    # advanced-ta and pandas-ta-remake installed via uv pip --no-deps (numpy conflict)
    # they are in requirements.txt for Docker
    "mplfinance==0.12.9b7",
    "num2words",
    "chromadb>=1.0.0",
    "tensorflow",
    "keras",
    "protobuf",
]

[dependency-groups]
dev = [
    "flake8",
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
